{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 105,
  "lineage": "154d924d-1cbe-c379-3e46-1f53a57b1a05",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051bfa33df3949860",
            "arn": "arn:aws:ec2:us-east-1:100035083462:instance/i-0bc8cad2c84c4dd75",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc8cad2c84c4dd75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04a4e96385c469a2e"
              }
            ],
            "primary_network_interface_id": "eni-04a4e96385c469a2e",
            "private_dns": "ip-10-0-1-230.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.230",
            "public_ip": "13.218.183.91",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0419a5d3c016f4ab9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085deb67c5598f644",
            "tags": {
              "Name": "ec2-instance",
              "app": "nginx"
            },
            "tags_all": {
              "Name": "ec2-instance",
              "app": "nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f3b77f6227ebfac7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "100035083462",
            "id": "i-0bc8cad2c84c4dd75",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_nginx_sg",
            "aws_subnet.ec2_nginx_subnet",
            "aws_vpc.ec2_nginx_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051bfa33df3949860",
            "arn": "arn:aws:ec2:us-east-1:100035083462:instance/i-0009fd644824d75f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0009fd644824d75f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b6813dadfbe4805a"
              }
            ],
            "primary_network_interface_id": "eni-0b6813dadfbe4805a",
            "private_dns": "ip-10-0-1-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "public_ip": "44.211.186.222",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04868b0db14c44f5b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085deb67c5598f644",
            "tags": {
              "Name": "ec2-instance-2",
              "app": "nginx"
            },
            "tags_all": {
              "Name": "ec2-instance-2",
              "app": "nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f3b77f6227ebfac7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "100035083462",
            "id": "i-0009fd644824d75f1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_nginx_sg",
            "aws_subnet.ec2_nginx_subnet",
            "aws_vpc.ec2_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ec2_nginx_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:100035083462:internet-gateway/igw-0ffcad5286e3beb27",
            "id": "igw-0ffcad5286e3beb27",
            "owner_id": "100035083462",
            "region": "us-east-1",
            "tags": {
              "Name": "ec2-instance-igw",
              "app": "nginx"
            },
            "tags_all": {
              "Name": "ec2-instance-igw",
              "app": "nginx"
            },
            "vpc_id": "vpc-096347a4ec96e1cc4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ec2_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ec2_nginx_interface_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:100035083462:network-interface/eni-084941d06acb8d21d",
            "id": "eni-084941d06acb8d21d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:61:99:e0:64:db",
            "owner_id": "100035083462",
            "private_ip": "10.0.1.253",
            "private_ip_list": [
              "10.0.1.253"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.253"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-0d10abab8d8cf2930"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085deb67c5598f644"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.ec2_nginx_subnet",
            "aws_vpc.ec2_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ec2_nginx_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:100035083462:route-table/rtb-0a3e7776b67a560a6",
            "id": "rtb-0a3e7776b67a560a6",
            "owner_id": "100035083462",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffcad5286e3beb27",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ec2-instance-public-rt",
              "app": "nginx"
            },
            "tags_all": {
              "Name": "ec2-instance-public-rt",
              "app": "nginx"
            },
            "timeouts": null,
            "vpc_id": "vpc-096347a4ec96e1cc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "100035083462",
            "id": "rtb-0a3e7776b67a560a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.ec2_nginx_igw",
            "aws_vpc.ec2_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ec2_nginx_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0722585623a46efe3",
            "region": "us-east-1",
            "route_table_id": "rtb-0a3e7776b67a560a6",
            "subnet_id": "subnet-085deb67c5598f644"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "100035083462",
            "id": "rtbassoc-0722585623a46efe3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.ec2_nginx_igw",
            "aws_route_table.ec2_nginx_public_rt",
            "aws_subnet.ec2_nginx_subnet",
            "aws_vpc.ec2_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ec2_nginx_public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021854a4bd220fa5d",
            "region": "us-east-1",
            "route_table_id": "rtb-0a3e7776b67a560a6",
            "subnet_id": "subnet-037fd9a65d1b22aa4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "100035083462",
            "id": "rtbassoc-021854a4bd220fa5d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.ec2_nginx_igw",
            "aws_route_table.ec2_nginx_public_rt",
            "aws_subnet.ec2_nginx_subnet_2",
            "aws_vpc.ec2_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:100035083462:security-group/sg-0f3b77f6227ebfac7",
            "description": "Permite acesso HTTP, HTTPS e SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3b77f6227ebfac7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-nginx-sg",
            "name_prefix": "",
            "owner_id": "100035083462",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-instance-sg",
              "app": "nginx"
            },
            "tags_all": {
              "Name": "ec2-instance-sg",
              "app": "nginx"
            },
            "timeouts": null,
            "vpc_id": "vpc-096347a4ec96e1cc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "100035083462",
            "id": "sg-0f3b77f6227ebfac7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ec2_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2_nginx_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:100035083462:subnet/subnet-085deb67c5598f644",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085deb67c5598f644",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "100035083462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ec2-instance-subnet",
              "app": "nginx"
            },
            "tags_all": {
              "Name": "ec2-instance-subnet",
              "app": "nginx"
            },
            "vpc_id": "vpc-096347a4ec96e1cc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "100035083462",
            "id": "subnet-085deb67c5598f644",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ec2_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2_nginx_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:100035083462:subnet/subnet-037fd9a65d1b22aa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037fd9a65d1b22aa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "100035083462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ec2-instance-subnet-2",
              "app": "nginx"
            },
            "tags_all": {
              "Name": "ec2-instance-subnet-2",
              "app": "nginx"
            },
            "vpc_id": "vpc-096347a4ec96e1cc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "100035083462",
            "id": "subnet-037fd9a65d1b22aa4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ec2_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ec2_nginx_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:100035083462:vpc/vpc-096347a4ec96e1cc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df80332cd1f2a81e",
            "default_route_table_id": "rtb-0fb7a25cc3a4581af",
            "default_security_group_id": "sg-0d10abab8d8cf2930",
            "dhcp_options_id": "dopt-038df51bc3eb5a1cb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-096347a4ec96e1cc4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb7a25cc3a4581af",
            "owner_id": "100035083462",
            "region": "us-east-1",
            "tags": {
              "Name": "ec2-instance-vpc",
              "app": "nginx"
            },
            "tags_all": {
              "Name": "ec2-instance-vpc",
              "app": "nginx"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "100035083462",
            "id": "vpc-096347a4ec96e1cc4",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}